concord_macros/tests/trybuild/fail/pagination/pagination_unknown_field_paged.stderr
error: unknown pagination field `cursor` for PagedPagination; allowed fields: page_key, per_page_key, page, per_page
  --> tests/trybuild/fail/pagination/pagination_unknown_field_paged.rs:15:13
   |
15 |             cursor = page,
   |             ^^^^^^
